@@ -1,0 +1,2 @@
+iconsdir = $(datadir)/icons/hicolor/48x48/apps
+icons_DATA = xfce4-notifyd.png
