@@ -1,0 +1,15 @@
+SUBDIRS = \
+	48x48
+
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+
+install-data-hook:
+	@-if test -z "$(DESTDIR)"; then \
+	    echo "Updating Gtk icon cache."; \
+	    $(gtk_update_icon_cache); \
+	else \
+	    echo "*** Icon cache not updated.  Remember to run:"; \
+	    echo "***"; \
+	    echo "***   $(gtk_update_icon_cache)"; \
+	    echo "***"; \
+	fi
