@@ -1,5 +1,12 @@
 2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>
 
+	* icons/48x48/xfce4-notifyd.png: Add app icon.
+	* xfce4-notifyd-config/xfce4-notifyd-config.desktop.in: Set
+	  Icon= key.
+	* configure.ac.in,Makefile.am: Add icons subdir to build.
+
+2008-11-24	Brian J. Tarricone <bjt23@cornell.edu>
+
 	* xfce4-notifyd-config/xfce4-notifyd-config.glade: Fix dialog
 	  layout spacing and add scrolled window shadow.
 
